<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="johannpolania.com.notasactividades.MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textAlignment="center"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Exposition"
        android:textSize="20dp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20dp"
        android:text="(10%)"
        android:id="@+id/textExpo"
        android:gravity="center"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/eExpo"
        android:numeric="decimal"
        />




</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Practice"
        android:textSize="20dp"
        android:gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="20dp"
        android:id="@+id/textPrac"
        android:text="(40%)"
        android:gravity="center"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/ePrac"
        android:numeric="decimal"
        />



</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/Project"
            android:textSize="20dp"
            android:gravity="center"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:id="@+id/textProy"
            android:gravity="center"
            android:text="(50%)"
            />



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/eProy"
            android:numeric="decimal"

            />




    </LinearLayout>

    <LinearLayout
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calculate"
            android:textSize="20dp"
            android:id="@+id/bCalcular"
            android:gravity="center"
            />

        <Button
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/Clean"
            android:textSize="20dp"
            android:id="@+id/bLimpiar"
            android:gravity="center"
            android:layout_weight="0.68" />




    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Final_Grade"
            android:textSize="20dp"



            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/eNota"

            />



    </LinearLayout>



</LinearLayout>
